--- a/index.html
+++ b/index.html
@@ -1,12 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>PLATZI</title>
+  </head>
+  <body>
+    <h1>Manipulacion del DOM Basico</h1>
+    <p class="parrafito">Esto es un parrafo de clase</p>
+    <p id="pid">Esto es un parrafo de ID</p>
+
+    <form id="formulario">
+      <input id="calculo1" placeholder="Escribe algo aqui" />
+      <input id="calculo2" placeholder="Escribe algo aqui" />
+      <button id="btnCalcular">Calcular</button>
+      <p id="resultado"></p>
+    </form>
+
+    <script src="./src/index.js"></script>
+  </body>
 </html>
